<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Property Hero</string>
    <string name="title_activity_login">Đăng nhập Property Hero</string>
    <string name="title_activity_member_regis">Đăng ký thành viên</string>
    <string name="title_activity_create_product">Đăng tin rao</string>
    <string name="title_activity_choose_location">Chọn vị trí</string>
    <string name="title_activity_gallery">Chọn hình ảnh</string>
    <string name="title_activity_filter">Bộ lọc nâng cao</string>
    <string name="title_activity_find_area">Tìm Khu Vực</string>
    <string name="title_activity_management">Quản Lý Thông Tin</string>
    <string name="google_app_api">AIzaSyCmT0dbedMCO3Hl8s-VYcveCxtO5hDfAsM</string>
    <string name="facebook_app_id">835680071452810</string>
    <string name="fb_login_protocol_scheme">fb835680071452810</string>
    <string name="facebook_client_token">c7ef9f04cdbf5b0c85dd4ba7cc37513f</string>
    <string-array name="distance_text">
        <item>Bán kính 1km</item>
        <item>Bán kính 3km</item>
        <item>Bán kính 5km</item>
    </string-array>
    <string-array name="map_type">
        <item>Tìm Tất Cả</item>
        <item>Tìm Căn Hộ</item>
        <item>Tìm Phòng Trọ</item>
    </string-array>
    <string-array name="image_option">
        <item>Máy ảnh</item>
        <item>Bộ sưu tập</item>
        <item>Hủy bỏ</item>
    </string-array>
    <string-array name="gender">
        <item>Nữ</item>
        <item>Nam</item>
        <item>Khác</item>
    </string-array>
    <string-array name="selected_text">
        <item>Xem chi tiết</item>
        <item>Xóa khỏi danh sách</item>
    </string-array>
    <string-array name="management_status">
        <item>Tất cả</item>
        <item>Tiến hành quảng cáo</item>
        <item>Kết thúc quảng cáo</item>
        <item>Hoàn thành giao dịch</item>
        <item>Đang kiểm tra</item>
        <item>Tin sai phạm</item>
    </string-array>
    <string-array name="management_status_title">
        <item tools:ignore="TypographyEllipsis">Có tất cả ... tin trong hệ thống</item>
        <item tools:ignore="TypographyEllipsis">Có ... tin đang tiến hành quảng cáo</item>
        <item tools:ignore="TypographyEllipsis">Có ... tin kết thúc quảng cáo</item>
        <item tools:ignore="TypographyEllipsis">Có ... tin hoàn thành giao dịch</item>
        <item tools:ignore="TypographyEllipsis">Có ... tin đang kiểm tra</item>
        <item tools:ignore="TypographyEllipsis">Có ... tin sai phạm</item>
    </string-array>
    <string name="err_title_google_play">Google Play Services</string>
    <string name="err_msg_google_play">Thiết bị của bạn chưa hỗ trợ Dịch vụ của Google Play, vui lòng cài đặt hoặc cập nhật và thử lại.</string>
    <string name="err_msg_sd_card">Không có thẻ nhớ. Vui lòng kiểm tra lại</string>
    <string name="err_request_api">Lỗi hệ thống vui lòng thử lại</string>
    <string name="request_time_out">Error: Request Time-out (408)</string>
    <string name="err_msg_connection">Lỗi kết nối internet!</string>
    <string name="err_msg_province">Vui lòng chọn Tỉnh/Thành phố</string>
    <string name="err_msg_district">Vui lòng chọn Quận/Huyện</string>
    <string name="text_notify">Thông báo</string>
    <string name="text_hint_notify">Nhận thông báo</string>
    <string name="text_user_setting">Cài đặt người dùng</string>
    <string name="text_country">Quốc gia</string>
    <string name="text_language">Ngôn ngữ</string>
    <string name="text_about">Thông tin về Property Hero</string>
    <string name="text_version">Phiên bản:&#160;</string>
    <string name="text_copyright" tools:ignore="TypographyEllipsis">\u00a9... Một sản phẩm của Gomi Corporation</string>
    <string name="text_view_all">Tất Cả</string>
    <string name="text_apartment">Căn Hộ</string>
    <string name="text_room">Phòng Trọ</string>
    <string name="text_attraction">Tìm Theo Khu Vực</string>
    <string name="text_attraction_more">Khu vực khác ></string>
    <string name="text_attraction_vietnam">Việt Nam</string>
    <string name="text_attraction_korea">Hàn Quốc</string>
    <string name="text_hello_toon">Trải Nghiệm Hello Toon</string>
    <string name="text_hello_toon_more">Xem tất cả ></string>
    <string name="text_reg_note">Đồng ý với Điều khoản và Sự Siêng tư để tiếp tục</string>
    <string name="text_terms">Điều khoản và Thỏa thuận dịch vụ Property Hero</string>
    <string name="text_privacy">Đồng ý với Việc Thu Thập và Sử Dụng Thông Tin cá nhân</string>
    <string name="text_loading" tools:ignore="TypographyEllipsis">Đang tải dữ liệu...</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_login_success">Đăng nhập thành công</string>
    <string name="text_msg_login" tools:ignore="TypographyEllipsis">Đang đăng nhập...</string>
    <string name="err_title_login">Sai Username/Password</string>
    <string name="err_msg_login">Vui lòng kiểm tra lại thông tin đăng nhập và thử lại</string>
    <string name="title_acc_locked">Tài khoản bị tạm khóa</string>
    <string name="title_acc_deletion">Tài khoản đã bị xóa</string>
    <string name="msg_acc_locked">Vui lòng kiểm tra lại thông tin đăng nhập hoặc liên hệ Property Hero để biết chi tiết</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_msg_reg" tools:ignore="TypographyEllipsis">Đang đăng ký...</string>
    <string name="text_verify_user">Email hoặc số điện thoại đã tồn tại</string>
    <string name="text_verify_phone">Số điện thoại liên hệ đã tồn tại</string>
    <string name="text_register_success">Đăng ký thành công</string>
    <string name="text_forgot_password">Quên mật khẩu?</string>
    <string name="text_tab_location">Tỉnh Thành</string>
    <string name="text_tab_marker">Địa Điểm</string>
    <string name="text_tab_recent_view">Xem Gần Đây</string>
    <string name="text_tab_favorite">Yêu Thích</string>
    <string name="text_tab_houses">Nhà riêng / Phòng trọ</string>
    <string name="text_tab_apartment">Căn hộ chung cư</string>
    <string name="text_btn_search">Tìm Kiếm</string>
    <string name="text_btn_list_view">Xem danh sách</string>
    <string name="text_btn_facebook">Đăng nhập bằng Facebook</string>
    <string name="text_btn_google">Đăng nhập bằng Google</string>
    <string name="text_btn_email">Đăng nhập với Email</string>
    <string name="err_msg_login_facebook">Đăng nhập bằng Facebook không thành công, vui lòng thử lại</string>
    <string name="err_msg_login_google">Đăng nhập bằng Google không thành công, vui lòng thử lại</string>
    <string name="text_province">Chọn Tỉnh/Thành phố</string>
    <string name="text_err_province">Vui lòng chọn Tỉnh/Thành phố</string>
    <string name="text_district">Chọn Quận/Huyện</string>
    <string name="text_err_district">Vui lòng chọn Quận/Huyện</string>
    <string name="text_hint_find_area">Nhập tên khu vực</string>
    <string name="text_find_marker">Tìm Địa Điểm</string>
    <string name="text_hint_find_marker">Tên tòa nhà, Trường đại học</string>
    <string name="text_hint_user_name">Email hoặc số điện thoại</string>
    <string name="text_err_username">Email hoặc số điện thoại không đúng định dạng</string>
    <string name="text_err_username_empty">Vui lòng nhập email hoặc số điện thoại</string>
    <string name="text_hint_password">Mật khẩu</string>
    <string name="text_err_pwd_empty">Vui lòng nhập mật khẩu</string>
    <string name="text_err_pwd_length">Mật khẩu phải lớn hơn 6 và nhỏ hơn 32 ký tự</string>
    <string name="text_hint_old_pwd">Nhập mật khẩu cũ</string>
    <string name="text_err_old_pwd">Mật khẩu cũ không đúng, vui lòng nhập lại</string>
    <string name="text_hint_new_pwd">Nhập mật khẩu mới</string>
    <string name="text_err_new_pwd_empty">Vui lòng nhập mật khẩu mới</string>
    <string name="text_hint_confirm_pwd">Nhập lại mật khẩu</string>
    <string name="text_err_confirm">Mật khẩu không khớp</string>
    <string name="text_hint_full_name">Họ tên</string>
    <string name="text_err_full_name">Vui lòng nhập họ tên</string>
    <string name="text_hint_email">Email</string>
    <string name="text_err_email_empty">Vui lòng nhập email</string>
    <string name="text_err_email">Email không đúng định dạng</string>
    <string name="text_hint_content">Nhập nội dung góp ý</string>
    <string name="text_err_content">Vui lòng nhập nội dung</string>
    <string name="text_contact_success">Rất cảm ơn bạn đã đóng góp ý kiến về Property Hero.</string>
    <string name="title_update_phone">Cập nhật Số điện thoại</string>
    <string name="msg_update_phone">Thành viên chưa có Số điện thoại liên hệ không thể đăng tin. Vui lòng cập nhật số điện thoại liên hệ</string>
    <string name="text_hint_phone">Số điện thoại liên hệ</string>
    <string name="text_hint_phone_num">Số điện thoại</string>
    <string name="text_err_phone_empty">Vui lòng nhập số điện thoại</string>
    <string name="text_err_phone">Số điện thoại không đúng định dạng (03xxxxxxxx, 05xxxxxxxx, 07xxxxxxxx, 08xxxxxxxx, 09xxxxxxxx)</string>
    <string name="text_hint_gender">Giới tính</string>
    <string name="text_hint_birth_date">Ngày sinh</string>
    <string name="text_property">Loại bất động sản</string>
    <string name="text_hint_property">Chọn loại bất động sản</string>
    <string name="text_err_property">Vui lòng chọn loại bất động sản</string>
    <string name="text_building">Chọn tên tòa nhà</string>
    <string name="text_err_building">Vui lòng chọn tên tòa nhà</string>
    <string name="msg_building_empty">Hệ thống chưa cập nhật thông tin tòa nhà khu vực này, vui lòng kiểm tra và thử lại.</string>
    <string name="text_key_info">Thông tin cơ bản</string>
    <string name="text_select_photo">Chọn hình ảnh</string>
    <string name="text_hint_address">Địa chỉ</string>
    <string name="text_err_address">Vui lòng nhập địa chỉ</string>
    <string name="text_hint_province">Tỉnh/Thành</string>
    <string name="text_hint_district">Quận/Huyện</string>
    <string name="text_location">Vị trí</string>
    <string name="text_err_location">Vui lòng xác định vị trí trên bản đồ</string>
    <string name="text_content_details">Thông tin mô tả</string>
    <string name="text_title_product">Tiêu đề</string>
    <string name="text_hint_title_product">Tiêu đề tin đăng của ban. Độ dài 18~180 ký tự</string>
    <string name="text_content_product">Mô tả chi tiết</string>
    <string name="text_hint_content_product">Giới thiệu chung về bất động sản của bạn. Tối đa 30~3000 ký tự</string>
    <string name="btn_create_product">Đăng tin</string>
    <string name="btn_back">Quay lại</string>
    <string name="text_view_product">Xem thông tin</string>
    <string name="text_hint_view_product">Xem chi tiết thông tin</string>
    <string name="text_note_product">Ghi chú cá nhân</string>
    <string name="text_hint_note_product">Chỉ người đăng tin mới được xem và được bảo mật</string>
    <string name="text_edit_product">Sửa thông tin</string>
    <string name="text_hint_edit_product">Chỉ áp dụng với những tin chưa xác thực hoặc kết thúc xác thực.</string>
    <string name="text_delete_product">Xóa tin rao</string>
    <string name="text_hint_delete_product">Thông tin bị xóa xong không thể phục hồi</string>
    <string name="text_certified_product">Đăng ký xác thực</string>
    <string name="text_hint_certified_product">Nếu tin đã kết thúc xác thực khi đăng ký lại sẽ tương tự như tin mới</string>
    <string name="text_completed_product">Hoàn thành giao dịch</string>
    <string name="text_hint_completed_product">Tin rao đã có người thuê</string>
    <string name="text_end_certified_product">Kết thúc xác thực</string>
    <string name="text_hint_end_certified_product">Tin sẽ không được hiển thị trong danh sách tin và được xử lý bảo mật</string>
</resources>