<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">
    <!--View-->
    <LinearLayout
        android:id="@+id/btnViewProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hint_view_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_divider_horizontal" />
    <!--Note-->
    <LinearLayout
        android:id="@+id/btnEditNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_note_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hint_note_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_divider_horizontal" />
    <!--Edit-->
    <LinearLayout
        android:id="@+id/btnEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/text_hint_edit_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_divider_horizontal" />
    <!--Delete-->
    <LinearLayout
        android:id="@+id/btnDeleteProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_recycling" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_delete_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hint_delete_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_divider_horizontal" />
    <!--Re Certified-->
    <LinearLayout
        android:id="@+id/btnReCertified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_start_certified" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_certified_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hint_certified_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_divider_horizontal" />
    <!--Completed-->
    <LinearLayout
        android:id="@+id/btnComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_completed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_completed_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hint_completed_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_divider_horizontal" />
    <!--End Certified-->
    <LinearLayout
        android:id="@+id/btnEndCertified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/title_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_half"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_vector_end_certified" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_double"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_end_certified_product"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hint_end_certified_product"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>


    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/configLayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="@null"
        app:srcCompat="@drawable/vector_action_close" />
</LinearLayout>